<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_create"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:id="@+id/registrationTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginTextField"
        android:hint="@string/enter_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationTV"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:hint="@string/enter_email_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTextField"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordFirstTextField"
        android:hint="@string/enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextField"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"

        android:layout_width="0dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSecondTextField"
        android:hint="@string/second_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordFirstTextField"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/privacyPolicyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:textAlignment="center"
        android:autoLink="web"
        android:text="@string/user_policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/authBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/authBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>