<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.deliveryapp.authmodule.ui.codefragment.viewmodel.SmsCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_code_email"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/codeTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/codeTV"
            app:layout_constraintBottom_toTopOf="@id/smsCodeTextField"
            android:text="@string/code_send_to_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/smsCodeTextField"
            android:layout_width="match_parent"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resendCodeBtn"
            android:layout_width="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smsCodeTextField"
            android:text="@{viewmodel.resendTimer}"  />

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Продолжить"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
